--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+    <title>MMOppy Bird</title>
     <!-- ignore favicon -->
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
     <style>
         html,
         body {
