Add basic information about the authors

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,6 +17,11 @@
 
 <body>
     <canvas id="main_canvas"></canvas>
+    <div id="authors">
+        <p>&copy;2018 David Emanuel Lukšić, Petar Šegina</p>
+        <p>Asset sources: <a href="assets/sources.txt">assets/sources.txt</a></p>
+        <p>Source: <a href="https://github.com/deluksic/mmopy-bird">github.com/deluksic/mmopy-bird</a></p>
+    </div>
 </body>
 
 </html>
