Small fixes, working on phones now too

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="target-densitydpi=device-dpi; width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
     <title>MMOppy Bird</title>
     <!-- ignore favicon -->
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
     <style>
         html,
         body {
